--- a/gluegap.html
+++ b/gluegap.html
@@ -2255,7 +2255,7 @@ sheetCtx.restore();
         const xOffset = 58;
         const __sx = (typeof sx === "number" && isFinite(sx) && sx !== 0) ? sx : 1; // safe, ไม่กระทบ logic เดิม
     const gapPx = Math.round(dispW / __sx); // แปลงกลับจาก display width -> px (ใน ROI)
-    const labelText = `${prefix}  ${gapMM.toFixed(2)} mm (${gapPx}px)`;
+    const labelText = `area:${Math.round(stableArea)}px²`;
 
         sheetCtx.fillStyle = bgColor;
         sheetCtx.fillRect(dispX, drawY - 8, dispW, 16);
